welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:32: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
  recule(a)
        ^